--- a/data.yml
+++ b/data.yml
@@ -1,8 +1,8 @@
 site-url: "http://localhost:3000"
-site-name: "競選系列網站 Guideline"
-site-title: "競選系列網站 Guideline"
-site-keywords: "競選系列網站 Guideline"
-site-description: "競選系列網站 Guideline"
+site-name: "2016 蔡英文競選官網"
+site-title: "2016 蔡英文競選官網"
+site-keywords: "2016 蔡英文競選官網"
+site-description: "2016 蔡英文競選官網"
 
 
 og-type: "website"
